--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "dependencies": {
-    "jquery": "^3.5.1",
-    "lodash": "^4.17.20"
-  },
   "name": "node",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/IvanMatador/nodeJS.git"
+    "url": "git+https://github.com/IvanMatador/nodeJS.git"
   },
   "author": "Ivan Matador",
   "license": "ISC",
@@ -19,8 +16,9 @@
     "url": "https://github.com/IvanMatador/nodeJS/issues"
   },
   "homepage": "https://github.com/IvanMatador/nodeJS#readme",
-  "description": "",
-  "devDependencies": {
-    "gulp": "^4.0.2"
+  "dependencies": {
+    "gulp": "^4.0.2",
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20"
   }
 }
